# image_stitching

./: .gitattributes  .gitignore  CMakeLists.txt  vcpkg.json
image_stitching/: CMakeLists.txt  cropper.cpp  cropper.h  euler.h  euler_order.h  image_stitchin3g.cpp  image_stitching.cpp  image_stitching.h  quaternion.h  serializer.cpp  serializer.h
